--- a/WRR/Styles/style.css
+++ b/WRR/Styles/style.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Delius&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Delius&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Delius&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Lexend:wght@100..900&display=swap');
 
+* {
+  box-sizing: border-box;
+}
 
 a {
   text-decoration: none;
@@ -10,43 +11,99 @@ a {
 
 body {
   background-color: rgb(65, 144, 170);
-  font-family: Delius, Funnel Sans, Lexend;
+  font-family: 'Delius', 'Funnel Sans', 'Lexend', sans-serif;
   font-size: 22px;
   margin: 0;
   padding: 0;
 }
 
-.logo{
-  width: 80px
+.logo {
+  width: 80px;
 }
+
+#logo_link {
+  padding-top: 5px;
+  justify-self: center;
+  align-self: center;
+}
+
 .icon {
   width: 80px;
   padding-top: 10px;
 }
 
 .card-img {
-  width: 300px;
+  width: 100%;
   border: 10px solid #0e0d0d;
+  transition: transform .5s;
+  box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover {
+  opacity: .6;
+  transform: scale(1.1);
 }
 
 main section img {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+#hero {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  position: relative;
+  margin-top: 0;
+}
+
+#hero-box {
+  grid-column: 1/4;
+  grid-row: 1/3;
+  z-index: -1;
 }
 
 #hero-img {
   width: 100%;
+  height: auto;
+  display: block;
 }
 
-.rivers-card{
-  margin: 200px 0;
+#hero-msg {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 100px;
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 30px;
+  border-radius: 10px;
+  color: white;
 }
 
-.camping-card{
-  margin: 200px 0;
+#hero-msg h1,
+#hero-msg h4 {
+  color: white;
+  margin: 10px 0;
+  text-shadow: 1px 1px 3px black;
 }
 
-.rapids-card{
-  margin: 200px 0;
+#hero-msg .book {
+  margin-top: 20px;
+  background-color: #c4b6a1;
+  color: black;
+  border: none;
+  padding: 12px 25px;
+  font-size: 1em;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px black;
+  transition: background-color 0.3s;
+  cursor: pointer;
+}
+
+#hero-msg .book:hover {
+  background-color: rgb(151, 93, 151);
+  color: white;
 }
 
 main {
@@ -59,74 +116,67 @@ main {
   max-width: 1600px;
 }
 
-#logo_link{
-  padding-top: 5px;
+header {
+  display: grid;
+  grid-template-columns: 150px auto;
+  background-color: #c4b6a1;
+  align-items: center;
 }
 
-header {
-  background-color: #c4b6a1;
+h1, h2, h4 {
+  font-family: 'Delius', 'Funnel Sans', 'Lexend', sans-serif;
+  margin: 0;
 }
 
 h1 {
-  text-align: center;
-  color: #8D3C70;
+  color: black;
   font-weight: 300;
   font-size: 80px;
-  font-family: Delius, Funnel Sans, Lexend;
 }
 
-h2 {
-   margin: 0;
-}
-
-#hero-msg h1 {
-  text-align: center;
-  background-color: rgb(65, 144, 170);
-  font-family: Delius, Funnel Sans, Lexend;
-}
-
-#hero-msg h4 {
-  text-align: center;
-  font-family: Delius, Funnel Sans, Lexend;
+.home-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+  padding: 50px;
 }
 
 .home-title {
-    font-family: Delius, Funnel Sans, Lexend;
-    font-size: 2em;
-    margin-top: 10px;
+  font-size: 2em;
+  margin-top: 10px;
 }
 
 .msg p {
   font-size: .8em;
-  
   padding-bottom: 15px;
 }
 
-#background {
-  height: 725px;
+.background {
+  color: #c4b6a1;
+  grid-column: 1/4;
+  grid-row: 4/5;
+  margin-top: 40px;
 }
 
 .msg {
   background-color: #6f7364;
+  color: white;
   line-height: 1.5em;
   padding: 35px;
+  grid-column: 2/4;
+  box-shadow: 5px 5px 10px #6f7364;
 }
 
-.book {
-  font-size: 18px;
-  padding: 15px 30px;
-  margin-top: 50px;
-  border-radius: 5px;
-}
+.book,
 .join {
   background-color: rgb(65, 144, 170);
   color: white;
-  padding: 10px 20px;
-  border-radius: 5px;
-  font-size: 18px;
   padding: 15px 30px;
   margin-top: 50px;
+  font-size: 18px;
   border-radius: 5px;
+  border: none;
+  cursor: pointer;
 }
 
 .book:hover,
@@ -134,13 +184,18 @@ h2 {
   background-color: rgb(151, 93, 151);
 }
 
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
 nav a {
-  background-color: rgb(65, 144, 170);
+  background-color: #c4b6a1;
   color: black;
   text-align: center;
-  padding: 10px;
-  display: inline-block;
   padding: 35px;
+  display: inline-block;
 }
 
 nav a:hover {
@@ -154,10 +209,19 @@ footer {
   font-size: 1.2em;
   padding: 25px 50px;
   margin-top: 200px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 footer a {
   color: black;
+}
+
+footer .social img {
+  width: 50px;
+  height: 50px;
+  padding-top: 0; /
 }
 
 footer p a:hover {
@@ -178,4 +242,62 @@ footer .social img{
 
 section {
   text-align: center;
+
+}
+
+
+/* Mobile Responsive */
+@media screen and (max-width: 900px) {
+  #hero, .home-grid {
+    display: block;
+    height: auto;
+  }
+
+  nav, footer {
+    flex-direction: column;
+  }
+
+  nav a {
+    display: block;
+    padding: 15px;
+  }
+
+  .rivers-card, .camping-card, .rapids-card {
+    margin: 50px auto;
+    width: 80%;
+  }
+
+  #background, .msg {
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+  }
+
+  .home-title {
+    font-size: 25px;
+  }
+
+  #hero-msg h4 {
+    display: none;
+  }
+
+  #hero-msg h1 {
+    color: #6f7364;
+  }
+
+  footer {
+    margin-top: 25px;
+    justify-content: center;
+  }
+
+  .footer-left, .footer-right {
+    flex: none;
+    text-align: center;
+    margin: 10px 0;
+  }
+
+  .footer-left {
+    gap: 15px;
+    flex-wrap: wrap;
+  }
 }
