--- a/WRR/Styles/style.css
+++ b/WRR/Styles/style.css
@@ -53,6 +53,7 @@ main section img {
   grid-template-columns: 1fr 3fr 1fr;
   position: relative;
   margin-top: 0;
+  margin-top: -100px; 
 }
 
 #hero-box {
@@ -123,6 +124,11 @@ header {
   align-items: center;
 }
 
+nav a:hover {
+  color: white !important;
+  text-decoration: underline;
+}
+
 h1, h2, h4 {
   font-family: 'Delius', 'Funnel Sans', 'Lexend', sans-serif;
   margin: 0;
@@ -151,10 +157,10 @@ h1 {
   padding-bottom: 15px;
 }
 
-.background {
+#background {
   color: #c4b6a1;
-  grid-column: 1/4;
-  grid-row: 4/5;
+  grid-column: 1/11;
+  grid-row: 4/9;
   margin-top: 40px;
 }
 
@@ -163,9 +169,38 @@ h1 {
   color: white;
   line-height: 1.5em;
   padding: 35px;
-  grid-column: 2/4;
+  grid-column: 6/10;
+  grid-row: 6/7;
   box-shadow: 5px 5px 10px #6f7364;
+
 }
+
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.rivers-card{
+  width: 300px;
+  grid-column: 2/4;
+  grid-row: 2/3;
+}
+
+.camping-card{
+  width: 300px;
+  height: 300px;
+  grid-column: 5/7;
+  grid-row: 2/3;
+}
+
+.rapids-card{
+  width: 300px;
+  grid-column: 8/10;
+  grid-row: 2/3;
+}
+
 
 .book,
 .join {
@@ -226,10 +261,7 @@ footer .social img {
 
 footer p a:hover {
   text-decoration: underline;
-}
-
-footer:hover {
-  background-color: aquamarine;
+  color: white;
 }
 
 footer .social img{
