--- a/Council/site-plan.css
+++ b/Council/site-plan.css
@@ -38,6 +38,18 @@ body {
   font-size: 18px;
   text-align: center;
 }
+
+.home{
+  width: 200px;
+}
+
+.second{
+  width: 200px;
+}
+
+.third{
+  width: 200px;
+}
 img {
   display: block;
   margin: 0 auto;
